fix spacing and change links

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -346,7 +346,6 @@ body {
       margin: 0.5rem;
     }
     &-link {
-      white-space: pre;
       font-size: 1.5rem;
       a {
         color: #fff;
@@ -356,6 +355,13 @@ body {
         }
       }
     }
+  }
+
+  :not(.alone).fa-github {
+    margin-right: 1rem;
+  }
+  .fa-link {
+    margin-left: 1rem;
   }
 }
 
